--- a/index.css
+++ b/index.css
@@ -11,14 +11,23 @@ html, body {
 }
 
 .display {
-    width: 100%;
+    width: 350px;
     height: 350px;
     border: 1px solid black;
-    overflow: auto;
+    overflow: hidden;
 }
 
 #render {
-    image-rendering: pixelated
+    image-rendering: pixelated;
+
+    object-fit: contain;
+
+    image-rendering: optimizeSpeed;            
+    image-rendering: -moz-crisp-edges;         
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -o-crisp-edges;         
+    image-rendering: crisp-edges;            
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .input > div {
